# voice-to-claude

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: config.md  setup.md  start.md  status.md  stop.md
hooks/: hooks.json
scripts/: config.sh  exec.py  setup.py  setup.sh  start.sh  status.sh  stop.sh
src/voice_to_claude/: __init__.py  config.py  daemon.py  setup.py  transcriber.py
