[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-to-claude"
version = "1.0.0"
description = "High-quality voice dictation for Claude Code using whisper.cpp with Metal GPU acceleration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VoiceToClipboard"}
]
keywords = ["voice", "dictation", "speech-to-text", "whisper", "transcription", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "sounddevice>=0.4.6,<0.5.0",
    "numpy>=1.24.0,<3.0.0",
    "scipy>=1.10.0,<2.0.0",
    "pynput>=1.7.6,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.200",
]

[project.urls]
Homepage = "https://github.com/enesbasbug/VoiceToClipboard"
Repository = "https://github.com/enesbasbug/VoiceToClipboard"
Issues = "https://github.com/enesbasbug/VoiceToClipboard/issues"

[project.scripts]
voice-to-claude = "voice_to_claude.daemon:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
